--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="title_activity_display_message">My Message</string>
     <string name="hello_world">Hello world!</string>
 
-    <string name="title_activity_start">Start</string>
+    <string name="title_activity_start">Euromilhões</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="title_activity_results">ResultsActivity</string>
